--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808070.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2018/07/afda1129499d43df5678ace59b2c4092-320x200.jpg">中共大肆抓维权律师 文东海送妻儿逃亡海外</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1097066394-320x200.jpg">【持续更新】武汉肺炎：又增1死   1人感染14名医护人员</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11796241.md#1">伊朗在变天 中共或失去打击美国的王牌</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801973.md#1">开豪车入故宫惹议 “露小宝”自称是红三代</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11798622.md#1">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a><br>
@@ -9,6 +9,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801004.md#1">习议“领导更替” 美媒：北京陷接班人怪圈</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11791100.md#1">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808403.md#1">颜丹：大陆赴台自由行游客“归零”谁之过？</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808421.md#1">袁斌：在中国“撒欢儿”的岂止是红三代露小宝</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808420.md#1">夏小强：肺炎疫情快速扩散 中国民众需自救</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808064.md#1">蜀笑笑：论合法</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804572.md#1">程晓容：红三代车入故宫 大陆社会畸形无底线</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804320.md#1">项云：中共流氓化政治和经济外强中干濒临灭亡</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804084.md#1">隋志：栽赃自焚案 中共害全国</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804120.md#1">诸葛高参：行动，灭共于2020</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
@@ -43,6 +43,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807962.md#1">孟晚舟前往卑诗高院 引渡聆讯今日正式启动</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807788.md#1">孟晚舟引渡案开庭前数小时?中共再喊“放人”</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807577.md#1">2019年 吉林省法轮功学员遭迫害综述</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808070.md#1">中共大肆抓维权律师 文东海送妻儿逃亡海外</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807894.md#1">“故宫奔驰女”发酵 何家揭红三代瞒亲友秘婚</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808035.md#1">孟晚舟引渡案今开庭 预示华为艰难一年之始</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807963.md#1">武汉肺炎确认人传人 世卫推广自保预防措施</a><br>
@@ -67,7 +68,6 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/1/n11761234.md#1">【思想领袖】陈日君：港府只是一个傀儡</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805358.md#1">与轧故宫红三代同名遭骂 女星高露无辜躺枪</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/29/n11753795.md#1">从“近海”到“两极” 中共海军战略内幕</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1">【持续更新】武汉肺炎：又增1死   1人感染14名医护人员</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805938.md#1">太贵怕被偷？农民背着猪耕田 笑翻网络</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805786.md#1">大陆旅游业萧条 “途牛网”亏损裁员</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805767.md#1">港警再放弹 中共挑衅世界 料掀国际制裁潮</a><br>
